--- a/06-React-Intro/homework/src/App.css
+++ b/06-React-Intro/homework/src/App.css
@@ -1,5 +1,7 @@
 .App {
+  display: flex;
   text-align: center;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -27,6 +29,9 @@
 .App-link {
   color: #61dafb;
 }
+#firstCity{
+  text-align: -webkit-center;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +41,4 @@
     transform: rotate(360deg);
   }
 }
+
