--- a/07-React-Estilos/homework/src/index.css
+++ b/07-React-Estilos/homework/src/index.css
@@ -1,13 +1,27 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: cursive;
+  color: wheat;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-repeat: no-repeat;
+  background:-o-linear-gradient(rgba(5,7,12,0.75), rgba(5,7,12,0.75));
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url('https://images.unsplash.com/photo-1566995589099-45de344a6dbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=955&q=80');
 }
-
+.jumbotron-fluid{
+  background-repeat: no-repeat;
+  color: black;
+  background-size: cover;
+  background:-o-linear-gradient(rgba(5,7,12,0.75), rgba(5,7,12,0.75));
+  background-attachment: fixed;
+  background-image: url('https://images.unsplash.com/photo-1566995589099-45de344a6dbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=955&q=80');
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.lead{
+  margin-top: 30px;
 }
