--- a/12-React-Redux/homework/src/components/Movie/Movie.module.css
+++ b/12-React-Redux/homework/src/components/Movie/Movie.module.css
@@ -5,12 +5,10 @@
 }
 
 .container {
-  margin: 0 auto;
-  width: 700px;
-  height: 600px;
-  background: #4d4d4d;
-  border-radius: 5px;
-  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
 }
 
 
